# skirmer.github.io

./: .gitignore  ChiEval.Rmd  _navbar.html  analytics.html  analytics.js  booking.Rmd  buildsite.R  config.toml  events.Rmd  generator.py  index.Rmd  index.css  index.knit.md  index.utf8.md  more_projects.Rmd  nav.css  projects.Rmd  pyproject.toml  style.css
.github/workflows/: hugo.yaml
addons/: _navbar_custom.html  analytics.html  analytics.js
archetypes/: articles.md
archive/: _navbar1.html
content/: _index.md
content/about/: index.md
content/booking/: index.md
content/speaking/: _index.md  aqi_2024.md  cdl_nu.md  earl_seattle.md  ieee_2025.md  koa_2024.md  metis.md  mlops_2022.md  mlops_agents_2025.md  ocair.md  odsc_east_2018.md  odsc_east_2026.md  odsc_west_2024.md  odsc_west_es.md  outlier_viz.md  r_ladies_anim.md  rladies.md  satrday.md  wids_chi_2025.md  wids_nov2025.md
content/writing/: _index.md  acriticallookataiimagegeneration.md  advanceplanningforaiprojectevaluation.md  aifomoshadowaiandotherbusinessproblems.md  aiinsocialresearchandpolling.md  archetypesofthedatascientistrole.md  artandai.md  canwesavetheaieconomy.md  choosingandimplementinghuggingfacemodels.md  consentintrainingai.md  (+43 more)
css/: font-and-color.css  index.css  nav.css  style.css
movies/: eda.R
new_site/: 404.html  index.html  index.xml  sitemap.xml
old_site/: buildsite.R
public/: 404.html  index.html  index.xml  sitemap.xml
quickstart/: config.toml  generator.py  sample.json
rmd/: booking.Rmd  events.Rmd  index.Rmd  more_projects.Rmd  projects.Rmd
(+419 files in other folders)
