[tool.poetry]
name = "hugo_site"

version = "0.1.0"

description = "Env management for hugo"

license = "Proprietary"

authors = ["Stephanie Kirmer"]


# Requirements
[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.25.0"
feedparser = "^6.0.10"
mdutils = "^1.6.0"
beautifulsoup4 = "^4.12.2"
markdownify = "^0.11.6"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.2"
coverage = "^7.2.7"
flake8 = "^6.0.0"
flake8-bugbear = "^23.6.5"
black = "^24.3.0"

